<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bookingView</string>

    <!-- for booking view -->
    <string name="booking_view_date">月</string>

    <!-- for customer booking view -->
    <string name="customer_booking_view_title">線上預約表</string>
    <string name="customer_booking_view_available">可電話預約</string>
    <string name="customer_booking_view_full">已滿</string>
    <string name="customer_booking_view_ok">預約成功</string>
    <string name="customer_booking_view_call">電話預約</string>

    <!-- for stylish booking view -->
    <string name="stylish_booking_view_title">我的預約</string>
    <string name="stylish_booking_view_today">今天</string>
    <string name="stylish_booking_view_new">新</string>

    <!-- for booking detail view -->
    <string name="booking_detail_add_title">新增預約</string>
    <string name="booking_detail_update_title">編輯預約</string>
    <string name="booking_detail_name">預約人</string>
    <string name="booking_detail_date">預約時間</string>
    <string name="booking_detail_choice">選擇</string>
    <string name="booking_detail_year">年</string>
    <string name="booking_detail_month">月</string>
    <string name="booking_detail_day">日</string>
    <string name="booking_detail_phone_number">聯絡電話</string>
    <string name="booking_detail_service_item">服務項目</string>
    <string name="booking_detail_required_time">所需時間</string>
    <string name="booking_detail_required_hour">小時</string>
    <string name="booking_detail_confirm">確定</string>
    <string name="booking_detail_cancel">取消</string>
    <string name="booking_detail_clear">清除預約</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="service_arrays">
        <item>Long Hair</item>
        <item>Short Hair</item>
        <item>Dye</item>
        <item>Perm</item>
    </string-array>

</resources>