<?xml version="1.0" encoding="UTF-8"?>
<com.ken.bookingview.BookingDetailView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="30dp" >

    <TextView
        android:id="@+id/booking_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/booking_detail_add_title"
        android:textColor="#888888"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/booking_detail_name"
            android:textColor="#888888"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/booking_detail_edit_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/booking_detail_sex_spinner"
            android:background="@null"
            android:gravity="right"
            android:lines="1"
            android:singleLine="true"
            android:textColor="#464646"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/booking_detail_sex_spinner"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/field_line_spinner"
            android:spinnerMode="dropdown" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#CCCCCC" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/booking_detail_date"
            android:textColor="#888888"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/booking_detail_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/booking_detail_date_arrow"
            android:lines="1"
            android:textColor="#2DB2C1"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/booking_detail_date_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#CCCCCC" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/booking_detail_phone_number"
            android:textColor="#888888"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/booking_detail_edit_phone_number"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:lines="1"
            android:singleLine="true"
            android:textColor="#464646"
            android:textSize="18sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#CCCCCC" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/booking_detail_service_item"
            android:textColor="#888888"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/booking_detail_service_item"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/booking_detail_service_item_arrow"
            android:gravity="right"
            android:lines="1"
            android:textColor="#2DB2C1"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/booking_detail_service_item_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#CCCCCC" />

    <TextView
        android:id="@+id/booking_detail_required_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:lines="1"
        android:paddingBottom="20dp"
        android:paddingTop="5dp"
        android:text="asv"
        android:textColor="#2DB2C1"
        android:textSize="18sp" />

    <Button
        android:id="@+id/booking_detail_confirm"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginBottom="33dp"
        android:background="#17C9B4"
        android:text="@string/booking_detail_confirm"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

    <Button
        android:id="@+id/booking_detail_cancel"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginBottom="33dp"
        android:background="#17C9B4"
        android:text="@string/booking_detail_cancel"
        android:textColor="#FFFFFF"
        android:textSize="17sp" />

</com.ken.bookingview.BookingDetailView>