<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ken.bookingview.StylishBookingActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#6063A8"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/customer_booking_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/customer_booking_view_title"
                    android:textColor="#ACACCE"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/custommer_booking_stylish_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/stylish_booking_view_title"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/customer_booking_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:src="@drawable/close" />
        </RelativeLayout>

        <include
            android:id="@+id/booking_calendar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_calendar_view" />
    </LinearLayout>

    <Button
        android:id="@+id/cusomer_booking_call_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="#E02DB2C1"
        android:text="@string/customer_booking_view_call"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</FrameLayout>